k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deppops
  namespace: deppops
  labels:
    app: deppops
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: deppops
